Fix cropped letters on inputs/selects in settings

--- a/src/components/Setting.module.css
+++ b/src/components/Setting.module.css
@@ -38,7 +38,6 @@
   padding: 8px;
   width: 100%;
   font-size: 1rem;
-  line-height: 1;
 
   &:focus {
     outline: none;
